# jobber

./: README.md  pyproject.toml
jobber/: cli.py  util_cli.py
jobber/command/: actions.py  generate_imports.py  new_job.py  new_table.py
jobber/model/: config.py  file_handler.py  folder.py  folder_spec.py  library.py  project.py  scaffold_template_imports.py  table.py  tester.py  value.py
jobber/model/folder_spec/: command.py  initialiser.py  model.py  repo.py  root.py  shared.py  test_job.py  test_root.py  test_util.py  util.py
jobber/template/commands/: template__table.py
jobber/template/project/: __init__.py  di_container.py  job.py  template.py
jobber/template/project/initialiser/: __init__.py  a_container.py  container.py  module_initialiser.py
jobber/template/project/repo/: __init__.py  db.py  dependencies.py
jobber/template/project/util/: __init__.py  config.py  dependencies.py
jobber/template/scaffold/project/: template__dependencies.py  template__di_container.py
jobber/template/scaffold/test/: template__conftest.py
jobber/template/test/: __init__.py  di.py
jobber/template/test/shared/: __init__.py  config_for_testing.py  db_setup.py  di.py  module_initialiser.py  (+1 more)
jobber/util/: cli_helpers.py  code_block.py  env.py  error.py  file_manager.py
tests/: imports.py
tests/shared/: __init__.py  cli.py  folder_helpers.py  job.py
tests/test_command/: test_actions.py  test_generate_imports.py  test_new_job.py  test_new_table.py
tests/test_model/: test_folder.py
tests/test_template/: test_di_container.py
tests/test_util/: test_code_block.py
(+20 files in other folders)
