[tool.poetry]
name = "jobber"
version = "0.1.2"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
jobber = "jobber.cli:cli"


[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
pendulum = "^2.1.2"
click = "^8.1.3"
PyMonad = "^2.4.0"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
pytest-env = "^0.6.2"
pdbpp = "^0.10.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = ["*Test", "Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = [
    "ENVIRONMENT=test"
]
testpaths = [
    "tests",
    "integration",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
